--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -21,9 +21,27 @@
     padding: auto;
 }
 
+#icon{
+    font-weight:500px;
+    color:black;
+    cursor: pointer;
+}
+
+#icon:hover{
+    color: teal;
+}
+
 .nav li {
     display: inline-block;
     margin: 0px 10px;
+}
+
+.nav ul li a {
+    color: black;
+    text-decoration: none;
+}
+.nav ul li a:hover {
+    color: teal;
 }
 
 .container1 {
@@ -55,8 +73,8 @@
 }
 
 button:hover {
-    background-color:white;
-    color: black;
+    background-color:teal;
+    color:white;
     font-weight: bold;
 }
 
@@ -110,10 +128,10 @@ button:hover {
 }
 
 button:hover {
-    background-color:white;
-    color: black;
+    background-color:teal;
+    color: white;
     font-weight: bold;
-    border: 2px solid black;
+    border: 1px solid black;
 }
 
 footer {
@@ -138,10 +156,33 @@ footer {
     margin: 0px 10px;
 }
 
-.container .row{
+.footer {
     display: flex;
-    flex-direction:column-reverse;
+    flex-direction: row;
     justify-content: space-between;
-    padding: 10px;
+    padding: 20px;
+}
+
+.footer ul{
+    list-style-type: none;
+    font-size: 20px;
+    padding:5px;
+    text-align: center;
+}
+
+.footer ul li{
+    margin: 0px 10px;
+    padding: 5px;
+}
+
+.footer ul :hover{
+    color: teal;
+    cursor: pointer;
+}
+
+.footer h3{
+    font-size: 20px;
+    color: white;
+    text-align: center;
 }
 
