--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -65,7 +65,7 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 20px;
     margin-top: 4px 2px;
     cursor: pointer;
     border-radius: 12px;
@@ -120,7 +120,7 @@ button:hover {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 20px;
     margin-top: 4px 2px;
     cursor: pointer;
     border-radius: 12px;
@@ -185,4 +185,6 @@ footer {
     color: white;
     text-align: center;
 }
+
+/* Responsiveness */
 
