--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -1,34 +1,58 @@
+
+/* This is CSS Reset, it handles default browser css */
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
+  }
+
+  html, body {
+    height: 100%;
+  }
+
+  body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+  }
+
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+
+  input, button, textarea, select {
+    font: inherit;
+  }
+
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+
+  #root, #__next {
+    isolation: isolate;
+  }
+
+  /* CSS Reset Done */
+  
 .nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5px;
     background-color: white;
     color: black;
 }
 
 .nav img {
-    width: 80px;
-    height: 80px;
-    margin: 0px;
-    padding: 0px;
-    float: left;
+    width: 8.5%;
+    height: 8.5%;
 }
 
 .nav ul {
     list-style-type: none;
     font-size: 20px;
-    padding: auto;
-}
-
-#icon{
-    font-weight:500px;
-    color:black;
-    cursor: pointer;
-}
-
-#icon:hover{
-    color: teal;
 }
 
 .nav li {
@@ -41,150 +65,225 @@
     text-decoration: none;
 }
 .nav ul li a:hover {
-    color: teal;
+    color:#ebafa7;
 }
 
-.container1 {
-    padding-top: 10px;
+i.bi{
+    font-weight: 500px;
+    color:black;
+    cursor: pointer;
+}
+
+i.bi:hover{
+    color:#ebafa7;
+}
+
+
+.banner {
     height: 100vh;
-    background-image: url(../Images/SlideImage1.jpg);
+    width: 100vw;
+    background-image: url(../Images/slideImage1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.container1 h3 {
-    font-size: 30px;
+.banner h3 {
+    font-size: 25px;
     color: black;
     text-align: center;
-    padding-top: 20px;
+    padding: 20px;
 }
 
-.container1 button {
+button {
     background-color: black;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 5px 32px;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    margin-top: 4px 2px;
+    font-size: 18px;
     cursor: pointer;
-    border-radius: 12px;
-    margin-left: 44%;
+    border-radius: 10px;
+    margin-left:44%;
 }
 
 button:hover {
-    background-color:teal;
+    background-color:#ebafa7;
     color:white;
-    font-weight: bold;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+      
 }
 
-.container2 {
-    padding-top: 15px;
-    height: 80vh;
-}
-
-.container2 h3 {
+h3 {
     font-size: 20px;
     color: black;
     text-align: center;
-    padding-top: 5px;
+    padding: 5px;
+}
+
+.women {
+    padding-top: 15px;
+}
+
+.men {
+    padding: 5px;
+}
+
+.accessories {
+    padding: 5px;
 }
 
 .categoryRow {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 10px;
 }
 
 .row img{
     width: 80%;
     height: 80%;
     padding: 10px;
-    margin-left: 10%;
 }
 
 .row p {
     font-size: 20px;
     color: black;
     font-weight:bold ;
-    text-align: center;
+    text-align:center;
     padding-top: 1px;
 }
 
-.container2 button {
-    background-color: black;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    margin-top: 4px 2px;
-    cursor: pointer;
-    border-radius: 12px;
-    margin-left: 44%;
-}
-
-button:hover {
-    background-color:teal;
-    color: white;
-    font-weight: bold;
-    border: 1px solid black;
-}
-
 footer {
-    margin-top: 10%;
     background-color: black;
     color: white;
     padding: 10px;
     text-align: center;
 }
 
-.container ul li a{
-    color: black;
-    text-decoration: none;
-}
-.container ul{
-    list-style-type: none;
-    font-size: 20px;
-    padding: auto;
-}
-.container ul li{
-    display: inline-block;
-    margin: 0px 10px;
-}
-
-.footer {
+.information {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 20px;
 }
 
-.footer ul{
+.information ul{
     list-style-type: none;
     font-size: 20px;
-    padding:5px;
+    padding:2px;
     text-align: center;
 }
 
-.footer ul li{
+.information ul li{
     margin: 0px 10px;
-    padding: 5px;
+    padding: 2px;
 }
 
-.footer ul :hover{
-    color: teal;
+.information ul :hover{
+    color:#ebafa7;
+    ;
     cursor: pointer;
 }
 
-.footer h3{
+.information h3{
     font-size: 20px;
     color: white;
     text-align: center;
 }
 
+.row i.bi{
+    font-weight: 500px;
+    color:white;
+    cursor: pointer;
+}
+
 /* Responsiveness */
 
+@media only screen and (max-width: 600px) {
+
+       .nav {
+        flex-direction:row;
+        align-items: center;
+        justify-content: space-between;
+        background-color: white;
+        color: black;
+        width: 100%;
+    }
+
+    .nav img {
+        width: 20%;
+        height: 20%;
+    }
+
+    .nav ul {
+        list-style-type: none;
+        font-size: 20px;
+        display:grid;
+    }
+
+    .nav ul li a {
+        color: black;
+        text-decoration: none;
+    }
+    .nav ul li a:hover {
+        color:#ebafa7;
+        ;
+    }
+
+    i.bi{
+        font-weight: 100px;
+        color:black;
+        cursor: pointer;
+    }
+
+    i.bi:hover{
+        color:#ebafa7;
+    }
+
+    .banner {
+        background-image: url(../Images/slide.jpg);
+        background-position-x: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .banner h3 {
+        font-size: 25px;
+        color: black;
+        text-align: center;
+        padding-bottom: 3%;
+    }
+
+    button {
+        background-color: black;
+        border: none;
+        color: white;
+        padding: 5px 32px;
+        text-align: center;
+        font-size: 18px;
+        cursor: pointer;
+        border-radius: 10px;
+        margin-left:35%;
+    }
+
+    .categoryRow{
+        flex-direction: column;
+    }
+
+    .row img{
+        width: 100%;
+        height: 80%;
+        padding: 10px;
+    }
+
+    .information {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px;
+    }
+
+    .information h3{
+        color:#ebafa7;
+        font-size: 25px;
+    }
+  }
