--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -94,6 +94,14 @@ i.bi:hover{
     padding: 20px;
 }
 
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height: 200px; */
+    /* border: 3px solid green; */
+}
+
 button {
     background-color: black;
     border: none;
@@ -103,7 +111,7 @@ button {
     font-size: 18px;
     cursor: pointer;
     border-radius: 10px;
-    margin-left:44%;
+    /* margin-left:44%; */
 }
 
 button:hover {
@@ -198,7 +206,7 @@ footer {
 
 /* Responsiveness */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 690px) {
 
        .nav {
         flex-direction:row;
@@ -253,6 +261,12 @@ footer {
         padding-bottom: 3%;
     }
 
+    .buttonContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     button {
         background-color: black;
         border: none;
@@ -262,7 +276,6 @@ footer {
         font-size: 18px;
         cursor: pointer;
         border-radius: 10px;
-        margin-left:35%;
     }
 
     .categoryRow{
