--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -46,8 +46,8 @@
 }
 
 .nav img {
-    width: 8.5%;
-    height: 8.5%;
+    width: 7.5%;
+    height: 7.5%;
 }
 
 .nav ul {
@@ -98,8 +98,7 @@ i.bi:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 200px; */
-    /* border: 3px solid green; */
+    padding: 10px;
 }
 
 button {
@@ -153,6 +152,9 @@ h3 {
 }
 
 .row p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 20px;
     color: black;
     font-weight:bold ;
