Create Css file for Account Sign Up Form

--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -159,8 +159,9 @@ h3 {
     color: black;
     font-weight:bold ;
     text-align:center;
-    padding-top: 1px;
+    margin-right: 60px;
 }
+
 
 footer {
     background-color: black;
