--- a/CSS/signUp.css
+++ b/CSS/signUp.css
@@ -8,17 +8,17 @@ body{
 
 .container{
     width: 50%;
-    height: 10%;
+    height: 5%;
     background-color:#D9D9D9;
     margin: 3% auto;
     border-radius: 10px;
-    padding: 10px;
+    padding: 5px;
     opacity: 0.9;
 }
 
 .container img{
-    width: 20%;
-    height: 20%;
+    width: 15%;
+    height: 15%;
     object-fit: cover;
     border-radius: 30%;
     margin: 10px auto;
@@ -64,9 +64,29 @@ fieldset{
 }
 
 .terms{
-    margin: 10px;
+    margin: 5px;
     padding: 5px;
     display: flex;
     flex-direction:column;
     align-items: center;
+}
+
+.terms a{
+    text-decoration: none;
+    color: green;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+button{
+    width: 200px;
+    height: 10%;
+    margin: 5px;
+    border-radius: 5px;
+    border: 1px solid black;
+    padding: 10px;
+    color: white;
+    background-color: black;
+    font-size: 15px;
+    font-weight: 600;
 }
