Fix Log In and Sign Up Css

--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -253,7 +253,7 @@ footer {
     .banner {
         background-image: url(../Images/slide.jpg);
         background-position-x: center;
-        background-repeat: no-repeat;
+        background-repeat:repeat;
         background-size: cover;
     }
 
