--- a/CSS/logIn.css
+++ b/CSS/logIn.css
@@ -1,4 +1,4 @@
-body{
+body {
     margin: 0;
     color: black;
     background-image: url(../images/shoes4.jpg);
@@ -17,33 +17,33 @@ body:after {
     clear: both;
 }
 
-.container{
-    width: 35%;
-    height: 10%;
-    background-color:#D9D9D9;
-    margin: 5% auto;
+.container {
+    background-color: #D9D9D9;
     border-radius: 10px;
-    padding: 5px;
     opacity: 0.9;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.container img{
-    width: 20%;
-    height: 20%;
+.container img {
+    width: 15%;
+    height: 15%;
     object-fit: cover;
     border-radius: 30%;
     margin: 10px auto;
-    display:flex;
+    display: flex;
 }
 
-.container h2{
+.container h2 {
     text-align: center;
     font-size: 20px;
     font-weight: 600;
     margin: 5px auto;
 }
 
-.container form{
+.container form {
     width: 100%;
     height: 100%;
     margin: 10px auto;
@@ -53,7 +53,7 @@ body:after {
     align-items: center;
 }
 
-.container form input{
+.container form input {
     width: 90%;
     height: 10px;
     margin: 10px;
@@ -62,34 +62,34 @@ body:after {
     padding: 10px;
 }
 
-.container label{
+.container label {
     font-size: 15px;
     font-weight: 600;
     margin: 10px;
 }
 
-fieldset{
-    border:none;
+fieldset {
+    border: none;
     margin: 10px;
     padding: 10px;
 }
 
-.terms{
+.terms {
     margin: 5px;
     padding: 5px;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     align-items: center;
 }
 
-.terms a{
+.terms a {
     text-decoration: none;
     color: green;
     font-size: 15px;
     font-weight: 600;
 }
 
-button{
+button {
     width: 150px;
     height: 10%;
     border-radius: 5px;
@@ -101,7 +101,7 @@ button{
     font-weight: 600;
 }
 
-button:hover{
+button:hover {
     background-color: green;
     border: none;
     cursor: pointer;
@@ -111,3 +111,60 @@ a {
     cursor: pointer;
     text-decoration: none;
 }
+
+button a {
+    color: white;
+}
+
+
+/* Responsiveness */
+@media only screen and (max-width: 690px) {
+    body{
+        margin: 0;
+        color: black;
+        background-image: url(../images/shoes4.jpg);
+        background-size: cover;
+        background-repeat:repeat;
+    }
+    
+    .container{
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .container img{
+        width: 25%;
+        height: 25%;
+        object-fit: cover;
+        border-radius: 10%;
+        margin: 10px auto;
+        display:flex;
+    }
+    
+    .container form{
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    button{
+        width: 200px;
+        height: 70%;
+        margin: 2px;
+        border-radius: 5px;
+        border: 1px solid black;
+        padding-bottom: 15px;
+        color: white;
+        background-color: black;
+        font-size: 15px;
+        font-weight: 600;
+    }
+    }
