--- a/CSS/signUp.css
+++ b/CSS/signUp.css
@@ -17,16 +17,6 @@ body:after {
     clear: both;
 }
 
-.container{
-    width: 50%;
-    height: 5%;
-    background-color:#D9D9D9;
-    margin: 3% auto;
-    border-radius: 10px;
-    padding: 5px;
-    opacity: 0.9;
-}
-
 .container img{
     width: 15%;
     height: 15%;
@@ -36,11 +26,20 @@ body:after {
     display:flex;
 }
 
+.container {
+    background-color: #D9D9D9;
+    border-radius: 10px;
+    opacity: 0.9;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .container h2{
     text-align: center;
     font-size: 20px;
     font-weight: 600;
-    margin: 5px auto;
 }
 
 .container form{
@@ -65,7 +64,7 @@ body:after {
 .container label{
     font-size: 15px;
     font-weight: 600;
-    margin: 10px;
+    margin: 5px;
 }
 
 fieldset{
@@ -92,7 +91,7 @@ fieldset{
 button{
     width: 200px;
     height: 10%;
-    margin: 5px;
+    margin: 2px;
     border-radius: 5px;
     border: 1px solid black;
     padding: 10px;
@@ -111,4 +110,57 @@ button:hover{
 a {
     cursor: pointer;
     text-decoration: none;
+}
+
+
+/* Responsiveness */
+@media only screen and (max-width: 690px) {
+body{
+    margin: 0;
+    color: black;
+    background-image: url(../images/shoes4.jpg);
+    background-size: cover;
+    background-repeat:repeat;
+}
+
+.container{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container img{
+    width: 20%;
+    height: 20%;
+    object-fit: cover;
+    border-radius: 20%;
+    margin: 10px auto;
+    display:flex;
+}
+
+.container form{
+    width: 100%;
+    height: 100%;
+    margin: 10px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+button{
+    width: 200px;
+    height: 70%;
+    margin: 2px;
+    border-radius: 5px;
+    border: 1px solid black;
+    padding-bottom: 15px;
+    color: white;
+    background-color: black;
+    font-size: 15px;
+    font-weight: 600;
+}
 }
