--- a/CSS/logIn.css
+++ b/CSS/logIn.css
@@ -17,12 +17,66 @@ body:after {
     clear: both;
 }
 
+
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    color: black;
+    width: 100%;
+}
+
+.nav img {
+    width: 7%;
+    height: 7%;
+}
+
+.nav ul {
+    list-style-type: none;
+    font-size: 20px;
+}
+
+.nav li {
+    display: inline-block;
+    margin: 0px 10px;
+}
+
+.nav ul li a {
+    color: black;
+    text-decoration: none;
+}
+
+.nav ul li a:hover {
+    color: #ebafa7;
+}
+
+i.bi {
+    font-weight: 500px;
+    color: black;
+    cursor: pointer;
+}
+
+i.bi:hover {
+    color: #ebafa7;
+}
+
+.navbar ul li a:hover {
+    color: #ebafa7;
+}
+
+.navbar img {
+    width: 7.5%;
+    height: 7.5%;
+    ;
+}
+
 .container {
     background-color: #D9D9D9;
     border-radius: 10px;
     opacity: 0.9;
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
