--- a/CSS/signUp.css
+++ b/CSS/signUp.css
@@ -17,12 +17,65 @@ body:after {
     clear: both;
 }
 
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    color: black;
+    width: 100%;
+}
+
+.nav img {
+    width: 7%;
+    height: 7%;
+}
+
+.nav ul {
+    list-style-type: none;
+    font-size: 20px;
+}
+
+.nav li {
+    display: inline-block;
+    margin: 0px 10px;
+}
+
+.nav ul li a {
+    color: black;
+    text-decoration: none;
+}
+
+.nav ul li a:hover {
+    color: #ebafa7;
+}
+
+i.bi {
+    font-weight: 500px;
+    color: black;
+    cursor: pointer;
+}
+
+i.bi:hover {
+    color: #ebafa7;
+}
+
+.navbar ul li a:hover {
+    color: #ebafa7;
+}
+
+.navbar img {
+    width: 7.5%;
+    height: 7.5%;
+    ;
+}
+
 .container img{
-    width: 15%;
-    height: 15%;
+    width: 12%;
+    height: 12%;
     object-fit: cover;
     border-radius: 30%;
-    margin: 10px auto;
+    margin: 5px auto;
     display:flex;
 }
 
@@ -30,10 +83,14 @@ body:after {
     background-color: #D9D9D9;
     border-radius: 10px;
     opacity: 0.9;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 50%;
+    margin: 10px auto;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .container h2{
@@ -90,7 +147,7 @@ fieldset{
 
 button{
     width: 200px;
-    height: 10%;
+    height:5%;
     margin: 2px;
     border-radius: 5px;
     border: 1px solid black;
@@ -98,7 +155,7 @@ button{
     color: white;
     background-color: black;
     font-size: 15px;
-    font-weight: 600;
+    font-weight: 300;
 }
 
 button:hover{
